GitHub Actions bot comment on PR to find artifacts faster
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -6,6 +6,23 @@ on:
 
 jobs:
 
+###########################################
+###### GitHub Actions bot comment #########
+###########################################
+
+  comment_pr:
+    runs-on: ubuntu-latest
+    name: GitHub Actions bot comment
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v1
+
+      - name: Comment on PR
+        uses: thollander/actions-comment-pull-request@master
+        with:
+          message: "PR Artifacts on: [GitHub Actions](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
 ######################
 ###### Linux #########
 ######################
@@ -34,7 +51,8 @@ jobs:
             platform: amlogic
 
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
         with:
           submodules: true
 
@@ -74,7 +92,8 @@ jobs:
     name: macOS
     runs-on: macos-latest
     steps:
-      - uses: actions/checkout@v1
+      - name: Checkout
+        uses: actions/checkout@v1
         with:
           submodules: true
 
