libjpeg-turbo, QJsonSchemaChecker, V4L2 width/height/fps
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/libsrc/grabber/v4l2/CMakeLists.txt
+++ b/libsrc/grabber/v4l2/CMakeLists.txt
@@ -11,6 +11,8 @@ target_link_libraries(v4l2-grabber
 	${QT_LIBRARIES}
 )
 
-if (JPEG_FOUND)
-	target_link_libraries(v4l2-grabber ${JPEG_LIBRARY})
-endif()
+if(TURBOJPEG_FOUND)
+	target_link_libraries(v4l2-grabber ${TurboJPEG_LIBRARY})
+elseif (JPEG_FOUND)
+		target_link_libraries(v4l2-grabber ${JPEG_LIBRARY})
+endif(TURBOJPEG_FOUND)
