--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -298,22 +298,31 @@ find_package(libusb-1.0 REQUIRED)
 find_package(Threads REQUIRED)
 add_definitions(${QT_DEFINITIONS})
 
-# Add jpeg library
+# Add JPEG library
 if (ENABLE_V4L2)
-	find_package(JPEG)
-	if (JPEG_FOUND)
-		add_definitions(-DHAVE_JPEG)
-		message( STATUS "Using JPEG library: ${JPEG_LIBRARIES}")
-		include_directories(${JPEG_INCLUDE_DIR})
+	# Turbo JPEG
+	find_package(TurboJPEG)
+	if (TURBOJPEG_FOUND)
+		add_definitions(-DHAVE_TURBO_JPEG)
+		message( STATUS "Using Turbo JPEG library: ${TurboJPEG_LIBRARY}")
+		include_directories(${TurboJPEG_INCLUDE_DIRS})
 	else()
-		message( STATUS "JPEG library not found, MJPEG camera format won't work in V4L2 grabber.")
+		# System JPEG
+		find_package(JPEG)
+		if (JPEG_FOUND)
+			add_definitions(-DHAVE_JPEG)
+			message( STATUS "Using system JPEG library: ${JPEG_LIBRARIES}")
+			include_directories(${JPEG_INCLUDE_DIR})
+		else()
+			message( STATUS "JPEG library not found, MJPEG camera format won't work in V4L2 grabber.")
+		endif()
+	endif (TurboJPEG_FOUND)
+
+	
+	if (TURBOJPEG_FOUND OR JPEG_FOUND)
+		add_definitions(-DHAVE_JPEG_DECODER)
 	endif()
 endif()
-
-# TODO[TvdZ]: This linking directory should only be added if we are cross compiling
-#if(NOT APPLE)
-#	link_directories(${CMAKE_FIND_ROOT_PATH}/lib/arm-linux-gnueabihf)
-#endif()
 
 if(APPLE)
 	set(CMAKE_EXE_LINKER_FLAGS "-framework CoreGraphics")
