removed necessary libs from the exclude list

--- a/src/hyperiond/CMakeLists.txt
+++ b/src/hyperiond/CMakeLists.txt
@@ -5,9 +5,9 @@ include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
 macro(InstallDependencies TARGET INSTALL_COMPONENT)
 	set(TARGET_FILE ${CMAKE_BINARY_DIR}/bin/${TARGET})
 	set(SYSTEM_LIBS_SKIP
-		"libbsd"
+#		"libbsd"
 		"libc"
-		"libdbus-1"
+#		"libdbus-1"
 		"libdl"
 		"libexpat"
 		"libfontconfig"
@@ -19,22 +19,22 @@ macro(InstallDependencies TARGET INSTALL_COMPONENT)
 		"libglib-2"
 		"libGLX"
 		"libgpg-error"
-		"liblz4"
-		"liblzma"
+#		"liblz4"
+#		"liblzma"
 		"libm"
 		"libpthread"
 		"librt"
 		"libstdc++"
-		"libsystemd"
+#		"libsystemd"
 		"libudev"
 		"libusb-1"
 		"libutil"
 		"libX11"
-		"libXau"
+#		"libXau"
 		"libxcb"
-		"libXdmcp"
-		"libXext"
-		"libXrender"
+#		"libXdmcp"
+#		"libXext"
+#		"libXrender"
 		"libz"
 	)
 
