--- a/libsrc/python/CMakeLists.txt
+++ b/libsrc/python/CMakeLists.txt
@@ -1,4 +1,6 @@
-if (NOT Python_FOUND)
+if (NOT CMAKE_VERSION VERSION_LESS "3.12")
+	find_package(Python COMPONENTS Interpreter Development REQUIRED)
+else()
 	find_package (PythonLibs ${PYTHON_VERSION_STRING} EXACT) # Maps PythonLibs to the PythonInterp version of the main cmake
 endif()
 
