--- a/libsrc/python/CMakeLists.txt
+++ b/libsrc/python/CMakeLists.txt
@@ -6,7 +6,11 @@ endif()
 
 # Include the python directory. Also include the parent (which is for example /usr/include)
 # which may be required when it is not includes by the (cross-) compiler by default.
-include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
+if (NOT CMAKE_VERSION VERSION_LESS "3.12")
+	include_directories(${Python3_INCLUDE_DIRS} ${Python3_INCLUDE_DIRS}/..)
+else()
+	include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
+endif()
 
 # Define the current source locations
 SET(CURRENT_HEADER_DIR ${CMAKE_SOURCE_DIR}/include/python)
@@ -21,5 +25,10 @@ add_library(python
 target_link_libraries(python
 	effectengine
 	hyperion-utils
-	${PYTHON_LIBRARIES}
 )
+
+if (NOT CMAKE_VERSION VERSION_LESS "3.12")
+	target_link_libraries( python ${Python3_LIBRARIES} )
+else()
+	target_link_libraries( python ${PYTHON_LIBRARIES} )
+endif()
