use 'add_definitions()' until CMake 3.12
Signed-off-by: Paulchen-Panther <Paulchen-Panter@protonmail.com>

--- a/libsrc/python/CMakeLists.txt
+++ b/libsrc/python/CMakeLists.txt
@@ -7,7 +7,7 @@ if (NOT CMAKE_VERSION VERSION_LESS "3.12")
 else()
 	find_package (PythonLibs ${PYTHON_VERSION_STRING} EXACT) # Maps PythonLibs to the PythonInterp version of the main cmake
 	include_directories(${PYTHON_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS}/..)
-	add_compile_definitions(PYTHON_VERSION_MAJOR_MINOR=${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
+	add_definitions(-DPYTHON_VERSION_MAJOR_MINOR=${PYTHON_VERSION_MAJOR}${PYTHON_VERSION_MINOR})
 endif()
 
 # Define the current source locations
